--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="with=device-width, initial-scale=1.0">
+	<title>Resumen del Alumno</title>
+	<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+	<header>
+		<h1>Información del Alumno</h1>
+	</header>
+	
+	<nav>
+	
+	</nav>
+	
+	<main>
+		<article>
+			<h2> Datos Básicos </h2>
+			<ul>
+				<li><strong>Nombre:</strong> Juan Pérez</li>
+				<li><strong>Edad:</strong> 25 años</li>
+				<li><strong>País:</strong> Argentina</li>
+			</ul>
+		</article>
+		<article>
+			<h2> Intereses </h2>
+			<ul>
+				<li>Programación web</li>
+				<li>Deportes</li>
+				<li>Lectura</li>
+			</ul>
+		</article>
+		<article>
+			<h2> Experiencias </h2>
+		</article>
+		<article>
+			<h2> Imágenes </h2>
+			<img src="dev1.jpg" alt="Descripción de la imagen 1">
+			<img src="dev2.jpg" alt="Descripción de la imagen 2">
+		  </article>
+		  <article>
+			<h2> Video </h2>
+			<video controls>
+			  <source src="videoplayback.mp4" type="video/mp4">
+			</video>
+		</article>		  
+	</main>
+	
+	<aside>
+	
+	</aside>
+	
+	<footer>
+		<h2>Experiencias</h2>
+		<p>Trabajé como desarrollador web en una pequeña agencia durante 2 años</p>
+	</footer>
+</body>
+</html>
