carpeta con template responsive

--- a/responsive-resume-master/index.html
+++ b/responsive-resume-master/index.html
@@ -13,13 +13,13 @@
         <!-- Favicon -->
         <link rel="icon" href="assets/img/muhammad.jpg"  type="image/jpg">
 
-        <title>Muhammad Essa</title>
+        <title>Franco García</title>
     </head>
     <body>
         <!-- HEADER -->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#" class="nav_logo">Muhammad Essa</a>
+                <a href="#" class="nav_logo">Franco García</a>
                 <div class="nav_menu" id="nav-menu">
                     <ul class="nav_list">
                         <li class="nav_item">
@@ -74,7 +74,7 @@
                         <div class="home_containter section bd-grid">
                             <div class="home_data bd-grid">
                                 <img src="assets/img/muhammad.jpg" alt="" class="home_img center">
-                                <h1 class="home_title">MUHAMMAD <b>ESSA</b></h1>
+                                <h1 class="home_title">FRANCO <b>GARCÍA</b></h1>
                                 <h3 class="home_profession">Web Developer</h3>
                                 <!-- Button to generate and download the pdf. Available for desktop. -->
                                 <div>
@@ -83,13 +83,13 @@
                             </div>
                             <div class="home_address bd-grid">
                                 <span class="home_information">
-                                    <i class="bx bx-map"> &nbsp; </i> Peshawar, Pakistan 
+                                    <i class="bx bx-map"> &nbsp; </i> Córdoba, Argentina
                                 </span>
                                 <span class="home_information">
-                                    <i class="bx bx-envelope"> &nbsp; </i> iMuhammadessa@gmail.com
+                                    <i class="bx bx-envelope"> &nbsp; </i> fjgfrancojg@gmail.com
                                 </span>
                                 <span class="home_information">
-                                    <i class="bx bx-phone"> &nbsp; </i> +92 (345) 9257074
+                                    <i class="bx bx-phone"> &nbsp; </i> +54 93534284651
                                 </span>
                             </div>
                         </div>
@@ -104,14 +104,14 @@
                     <section class="social section">
                         <h2 class="section-title">SOCIAL</h2>
                         <div class="social_container bd-grid">
-                            <a href="https://www.linkedin.com/in/imuhammadessa/" target="_blank" class="social_link">
-                                <i class="bx bxl-linkedin-square social_icon"></i> @imuhammadessa
+                            <a href="https://www.linkedin.com/in/" target="_blank" class="social_link">
+                                <i class="bx bxl-linkedin-square social_icon"></i> @francojvrgarcia
                             </a>
-                            <a href="https://github.com/imuhammadessa/" target="_blank" class="social_link">
-                                <i class="bx bxl-github social_icon"></i> @imuhammadessa
+                            <a href="https://github.com/francojvrgarcia/" target="_blank" class="social_link">
+                                <i class="bx bxl-github social_icon"></i> @francojvrgarcia
                             </a>
-                            <a href="https://twitter.com/imuhammadessa" target="_blank" class="social_link">
-                                <i class="bx bxl-twitter social_icon"></i> @imuhammadessa
+                            <a href="https://twitter.com/" target="_blank" class="social_link">
+                                <i class="bx bxl-twitter social_icon"></i> @francojvrgarcia
                             </a>
                         </div>
                     </section>
@@ -119,13 +119,13 @@
                     <section class="profile section" id="profile">
                         <h2 class="section-title">Profile</h2>
                         <p class="profile_description">
-                            I am a person, very responsible for work during working hours assigned by a company. I am very goal oriented, result driven, detailed and focused person. I have several years of experiences & achievements in this field.
+                         Soy una persona muy responsable en el trabajo durante las horas laborales asignadas por una empresa. Tengo un enfoque muy orientado a objetivos, orientado a resultados, detallista y concentrado. Tengo varios años de experiencia y logros en este campo.
                         </p>
                     </section>
                     
                     <!-- EDUCATION -->
                     <section class="education section" id="education">
-                        <h2 class="section-title">Education</h2>
+                        <h2 class="section-title">Educación</h2>
                         <div class="education_container bd-grid">
                             <div class="education_content">
                                 <div class="education_time">
@@ -133,8 +133,8 @@
                                     <span class="education_line"></span>
                                 </div>
                                 <div class="education_data bd-grid">
-                                    <h3 class="education_title">Bachelors Computer Science</h3>
-                                    <span class="education_studies">Islamia College University, Peshawar</span>
+                                    <h3 class="education_title">Licenciatura en Ciencias de la Computación</h3>
+                                    <span class="education_studies">Islamia College University, Peshawar se traduce al español como Universidad del Colegio Islámico, Peshawar.</span>
                                     <span class="education_year">2016 - 2020</span>
                                 </div>
                             </div>
@@ -144,8 +144,8 @@
                                     <span class="education_line"></span>
                                 </div>
                                 <div class="education_data bd-grid">
-                                    <h3 class="education_title">FACULTY OF SCIENCE</h3>
-                                    <span class="education_studies">Leeds College Peshawar</span>
+                                    <h3 class="education_title">Facultdad de ciencias</h3>
+                                    <span class="education_studies">La traducción de "Leeds College Peshawar" al español sería "Colegio Leeds Peshawar".</span>
                                     <span class="education_year">2014 - 2016</span>
                                 </div>
                             </div>
@@ -155,8 +155,8 @@
                                     <!-- <span class="education_line"></span> -->
                                 </div>
                                 <div class="education_data bd-grid">
-                                    <h3 class="education_title">MATRICULATION</h3>
-                                    <span class="education_studies">University Public School, Peshawar</span>
+                                    <h3 class="education_title">Matriculación</h3>
+                                    <span class="education_studies">La traducción de "University Public School, Peshawar" al español sería "Escuela Pública Universitaria, Peshawar".</span>
                                     <span class="education_year">2012 - 2014</span>
                                 </div>
                             </div>
@@ -200,7 +200,7 @@
                 <div class="resume__right">
                     <!-- EXPERIENCE -->
                     <section class="experience section" id="experience">
-                        <h2 class="section-title">Experience</h2>
+                        <h2 class="section-title">Experiencia</h2>
                         <div class="experience_container bd-grid">
                             <div class="experience_content">
                                 <div class="experience_time">
