--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</header>
 	
 	<nav>
-		<a href="responsive-resume-master/index.html">Ver mi currículum responsive</a>
+		<a target="_blank" href="responsive-resume-master/index.html">Ver mi currículum responsive</a>
 	</nav>
 	
 	<main>
@@ -49,7 +49,7 @@
 	</main>
 	
 	<aside>
-	
+		<a target="_blank" href="responsive-resume-master/index.html">Ver mi currículum responsive</a>
 	</aside>
 	
 	<footer>
