--- a/responsive-resume-master/index.html
+++ b/responsive-resume-master/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <!-- Favicon -->
-        <link rel="icon" href="assets/img/muhammad.jpg"  type="image/jpg">
+        <link rel="icon" href="assets/img/franco.jpg"  type="image/jpg">
 
         <title>Franco García</title>
     </head>
@@ -29,12 +29,12 @@
                         </li>
                         <li class="nav_item">
                             <a href="#profile" class="nav_link">
-                                <i class='bx bx-user nav_icon'></i>Profile
+                                <i class='bx bx-user nav_icon'></i>Perfil
                             </a>
                         </li>
                         <li class="nav_item">
                             <a href="#education" class="nav_link">
-                                <i class='bx bx-book nav_icon'></i>Education
+                                <i class='bx bx-book nav_icon'></i>Educación
                             </a>
                         </li>
                         <li class="nav_item">
@@ -44,17 +44,17 @@
                         </li>
                         <li class="nav_item">
                             <a href="#experience" class="nav_link">
-                                <i class='bx bx-briefcase-alt nav_icon'></i>Experience
+                                <i class='bx bx-briefcase-alt nav_icon'></i>Experiencia
                             </a>
                         </li>
                         <li class="nav_item">
                             <a href="#certificate" class="nav_link">
-                                <i class='bx bx-award nav_icon'></i>Certificate
+                                <i class='bx bx-award nav_icon'></i>Certificados
                             </a>
                         </li>
                         <li class="nav_item">
                             <a href="#references" class="nav_link">
-                                <i class='bx bx-link-external nav_icon'></i>References
+                                <i class='bx bx-link-external nav_icon'></i>Referencias
                             </a>
                         </li>
                     </ul>
@@ -78,7 +78,7 @@
                                 <h3 class="home_profession">Web Developer</h3>
                                 <!-- Button to generate and download the pdf. Available for desktop. -->
                                 <div>
-                                    <a download="" href="assets/pdf/Muhammadessa-resume.pdf" class="home_button-movil">Download</a>
+                                    <a download="" href="assets/pdf/franco-resumen.pdf" class="home_button-movil">Download</a>
                                 </div>
                             </div>
                             <div class="home_address bd-grid">
@@ -134,7 +134,7 @@
                                 </div>
                                 <div class="education_data bd-grid">
                                     <h3 class="education_title">Licenciatura en Ciencias de la Computación</h3>
-                                    <span class="education_studies">Islamia College University, Peshawar se traduce al español como Universidad del Colegio Islámico, Peshawar.</span>
+                                    <span class="education_studies">Universidad del Colegio Islámico, Peshawar.</span>
                                     <span class="education_year">2016 - 2020</span>
                                 </div>
                             </div>
@@ -145,7 +145,7 @@
                                 </div>
                                 <div class="education_data bd-grid">
                                     <h3 class="education_title">Facultdad de ciencias</h3>
-                                    <span class="education_studies">La traducción de "Leeds College Peshawar" al español sería "Colegio Leeds Peshawar".</span>
+                                    <span class="education_studies">Colegio Leeds Peshawar.</span>
                                     <span class="education_year">2014 - 2016</span>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                 </div>
                                 <div class="education_data bd-grid">
                                     <h3 class="education_title">Matriculación</h3>
-                                    <span class="education_studies">La traducción de "University Public School, Peshawar" al español sería "Escuela Pública Universitaria, Peshawar".</span>
+                                    <span class="education_studies">Escuela Pública Universitaria, Peshawar.</span>
                                     <span class="education_year">2012 - 2014</span>
                                 </div>
                             </div>
@@ -207,13 +207,14 @@
                                     <span class="experience_rounder"></span>
                                     <span class="experience_line"></span>
                                 </div>
-                                <div class="experience_data bd-grid">
-                                    <h3 class="experience_title">WEB DEVELOPER</h3>
-                                    <span class="experience_company">April 2021 - Till date | <a href="https://itartificer.com/">IT Artificer</a> </span>
-                                    <p class="experience_description">
-                                        After getting some experience, I hired as <b>Jr. Web Developer</b> at <a href="https://itartificer.com/">IT Artificer</a> in April 2021. ITA serving its Services all over the world especially in middle-east. ITA mainly focusing on delivering high quality software solutions which enable customers to achieve their critical IT objectives.
-                                    </p>
-                                </div>
+                             <div class="experience_data bd-grid">
+								<h3 class="experience_title">DESARROLLADOR WEB</h3>
+								<span class="experience_company">Abril 2021 - Hasta la fecha | <a href="https://itartificer.com/">IT Artificer</a> </span>
+								<p class="experience_description">
+									Después de adquirir experiencia, fui contratado como <b>Jr. Desarrollador Web</b> en <a href="https://itartificer.com/">IT Artificer</a> en abril de 2021. ITA ofrece sus servicios en todo el mundo, especialmente en Oriente Medio. ITA se enfoca principalmente en proporcionar soluciones de software de alta calidad que permitan a los clientes alcanzar sus objetivos críticos de tecnología de la información.
+								</p>
+							</div>
+
                             </div>
                             <div class="experience_content">
                                 <div class="experience_time">
@@ -221,45 +222,47 @@
                                     <!-- <span class="experience_line"></span> -->
                                 </div>
                                 <div class="experience_data bd-grid">
-                                    <h3 class="experience_title">FRONTEND DEVELOPER</h3>
-                                    <span class="experience_company">Nov 2020 - Dec 2020 | <a href="https://interns.pk/">Interns Pakistan</a></span>
-                                    <p class="experience_description">
-                                        As soon I graduated I selected as <b>Frontend Developer</b> at <a href="https://interns.pk/">Interns Pakistan</a> in November 2020. Interns Pakistan is a company who helping fresh graduates remotely by providing an internships. I awarded the best intern award by Interns Pakistan.
-                                    </p>
-                                </div>
+									<h3 class="experience_title">DESARROLLADOR FRONTEND</h3>
+									<span class="experience_company">Noviembre 2020 - Diciembre 2020 | <a href="https://interns.pk/">Interns Pakistan</a></span>
+									<p class="experience_description">
+										Tan pronto como me gradué, fui seleccionado como <b>Desarrollador Frontend</b> en <a href="https://interns.pk/">Interns Pakistan</a> en noviembre de 2020. Interns Pakistan es una empresa que ayuda a los recién graduados de forma remota proporcionando pasantías. Fui galardonado con el premio al mejor pasante por Interns Pakistan.
+									</p>
+								</div>
+
                             </div>
                         </div>
                     </section>
                     <!-- CERTIFICATES -->
-                    <section class="certificate section" id="certificate">
-                        <h2 class="section-title">Certificates</h2>
-                        <div class="certificate_container bd-grid">
-                            <div class="certificate_content">
-                                <h3 class="certificate_title">NodeJs Backend-Development - 2021</h3>
-                                <p class="certificate_description">
-                                    I had done detailed course with certification under Khyber-Pakhtunkhwa initiative in collaboration with Cybervision, KPYEP & UNDP
-                                </p>
-                            </div>
-                            <div class="certificate_content">
-                                <h3 class="certificate_title">Microsoft Student Partner - 2020</h3>
-                                <p class="certificate_description">
-                                    I worked as an active ambassador for Microsoft as Microsoft Student Partner - Pakistan for one of their great event as Microfest++
-                                </p>
-                            </div>
-                            <div class="certificate_content">
-                                <h3 class="certificate_title">WordPress Development - 2019</h3>
-                                <p class="certificate_description">
-                                    I had done detailed course with certification under Virtual University initiative in collaboration with Ministry of Information Technology Punjab, Ignite & DigiSkills.pk
-                                </p>
-                            </div>
-                            <div class="certificate_content">
-                                <h3 class="certificate_title">Web Development - 2017 </h3>
-                                <p class="certificate_description">
-                                    I had done detailed course with certification at The Mentors, Pakistan a Software House. I learnt how web applications works, developing software from scratch and testing it.
-                                </p>
-                            </div>
-                        </div>
-                    </section>
+                   <section class="certificate section" id="certificate">
+						<h2 class="section-title">Certificados</h2>
+						<div class="certificate_container bd-grid">
+							<div class="certificate_content">
+								<h3 class="certificate_title">Desarrollo Backend con NodeJs - 2021</h3>
+								<p class="certificate_description">
+									Realicé un curso detallado con certificación bajo la iniciativa de Khyber-Pakhtunkhwa en colaboración con Cybervision, KPYEP y UNDP.
+								</p>
+							</div>
+							<div class="certificate_content">
+								<h3 class="certificate_title">Microsoft Student Partner - 2020</h3>
+								<p class="certificate_description">
+									Trabajé como embajador activo para Microsoft como Microsoft Student Partner - Pakistán en uno de sus grandes eventos llamado Microfest++
+								</p>
+							</div>
+							<div class="certificate_content">
+								<h3 class="certificate_title">Desarrollo de WordPress - 2019</h3>
+								<p class="certificate_description">
+									Realicé un curso detallado con certificación bajo la iniciativa de la Virtual University en colaboración con el Ministerio de Tecnología de la Información de Punjab, Ignite y DigiSkills.pk.
+								</p>
+							</div>
+							<div class="certificate_content">
+								<h3 class="certificate_title">Desarrollo Web - 2017</h3>
+								<p class="certificate_description">
+									Realicé un curso detallado con certificación en The Mentors, Pakistán, una empresa de software. Aprendí cómo funcionan las aplicaciones web, desarrollando software desde cero y probándolo.
+								</p>
+							</div>
+						</div>
+					</section>
+
                     <!-- REFERENCES -->
                     <section class="references section" id="references">
                         <h2 class="section-title">References</h2>
