--- a/responsive-resume-master/index.html
+++ b/responsive-resume-master/index.html
@@ -73,7 +73,7 @@
                     <section class="home" id="home">
                         <div class="home_containter section bd-grid">
                             <div class="home_data bd-grid">
-                                <img src="assets/img/muhammad.jpg" alt="" class="home_img center">
+                                <img src="assets/img/franco.jpg" alt="" class="home_img center">
                                 <h1 class="home_title">FRANCO <b>GARCÍA</b></h1>
                                 <h3 class="home_profession">Web Developer</h3>
                                 <!-- Button to generate and download the pdf. Available for desktop. -->
@@ -286,45 +286,47 @@
                         </div>
                     </section>
                     <!-- LANGUAGES -->
-                    <section class="languages section">
-                        <h2 class="section-title">Languages</h2>
-                        <div class="languages_container">
-                            <ul class="languages_content bd-grid">
-                                <li class="languages_name">
-                                    <span class="languages_circle"></span> English
-                                </li>
-                                <li class="languages_name">
-                                    <span class="languages_circle"></span> Urdu
-                                </li>
-                                <li class="languages_name">
-                                    <span class="languages_circle"></span> Pashto
-                                </li>
-                            </ul>
-                        </div>
-                    </section>
+                   <section class="languages section">
+						<h2 class="section-title">Idiomas</h2>
+						<div class="languages_container">
+							<ul class="languages_content bd-grid">
+								<li class="languages_name">
+									<span class="languages_circle"></span> Inglés
+								</li>
+								<li class="languages_name">
+									<span class="languages_circle"></span> Urdu
+								</li>
+								<li class="languages_name">
+									<span class="languages_circle"></span> Pashto
+								</li>
+							</ul>
+						</div>
+					</section>
+
                     
                     <!-- INTERESTS -->
                     <section class="interests section">
-                        <h2 class="section-title">Interests</h2>
-                        <div class="interests_container bd-grid">
-                            <div class="interests_content">
-                                <i class='bx bx-code-alt interests_icon'></i>
-                                <span class="interests_name">Coding</span>
-                            </div>
-                            <div class="interests_content">
-                                <i class='bx bxs-coffee-togo interests_icon' ></i>
-                                <span class="interests_name">Coffee</span>
-                            </div>
-                            <div class="interests_content">
-                                <i class="bx bxs-plane-alt interests_icon"></i>
-                                <span class="interests_name">Traveling</span>
-                            </div>
-                            <div class="interests_content">
-                                <i class="bx bxs-camera interests_icon "></i>
-                                <span class="interests_name">Photography</span>
-                            </div>
-                        </div>
-                    </section>
+						<h2 class="section-title">Intereses</h2>
+						<div class="interests_container bd-grid">
+							<div class="interests_content">
+								<i class='bx bx-code-alt interests_icon'></i>
+								<span class="interests_name">Programación</span>
+							</div>
+							<div class="interests_content">
+								<i class='bx bxs-coffee-togo interests_icon' ></i>
+								<span class="interests_name">Café</span>
+							</div>
+							<div class="interests_content">
+								<i class="bx bxs-plane-alt interests_icon"></i>
+								<span class="interests_name">Viajar</span>
+							</div>
+							<div class="interests_content">
+								<i class="bx bxs-camera interests_icon "></i>
+								<span class="interests_name">Fotografía</span>
+							</div>
+						</div>
+					</section>
+
                 </div>
             </div>        
         </main> 
