--- a/index.html
+++ b/index.html
@@ -1,60 +1,62 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="with=device-width, initial-scale=1.0">
 	<title>Resumen del Alumno</title>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css"> <!-- Enlazamos el archivo de estilos externo "styles.css" -->
 </head>
 <body>
 	<header>
-		<h1>Información del Alumno</h1>
+		<h1>Información del Alumno</h1> <!-- Encabezado principal del contenido -->
 	</header>
 	
 	<nav>
-		<a target="_blank" href="responsive-resume-master/index.html">Ver mi currículum responsive</a>
+		<a target="_blank" href="responsive-resume-master/index.html">Ver mi currículum responsive</a> <!-- Enlace a un currículum responsive en otra página -->
 	</nav>
 	
 	<main>
 		<article>
-			<h2> Datos Básicos </h2>
+			<h2> Datos Básicos </h2> <!-- Título de la sección de Datos Básicos -->
 			<ul>
-				<li><strong>Nombre:</strong> Juan Pérez</li>
+				<li><strong>Nombre:</strong> Juan Pérez</li> <!-- Lista con detalles del alumno -->
 				<li><strong>Edad:</strong> 25 años</li>
 				<li><strong>País:</strong> Argentina</li>
 			</ul>
 		</article>
 		<article>
-			<h2> Intereses </h2>
+			<h2> Intereses </h2> <!-- Título de la sección de Intereses -->
 			<ul>
-				<li>Programación web</li>
+				<li>Programación web</li> <!-- Lista de intereses del alumno -->
 				<li>Deportes</li>
 				<li>Lectura</li>
 			</ul>
 		</article>
 		<article>
-			<h2> Experiencias </h2>
+			<h2> Experiencias </h2> <!-- Título de la sección de Experiencias (vacía en este caso) -->
 		</article>
 		<article>
-			<h2> Imágenes </h2>
-			<img src="dev1.jpg" alt="Descripción de la imagen 1">
-			<img src="dev2.jpg" alt="Descripción de la imagen 2">
+			<h2> Imágenes </h2> <!-- Título de la sección de Imágenes -->
+			<img src="dev1.jpg" alt="Descripción de la imagen 1"> <!-- Imagen 1 con una descripción alternativa -->
+			<img src="dev2.jpg" alt="Descripción de la imagen 2"> <!-- Imagen 2 con una descripción alternativa -->
 		  </article>
 		  <article>
-			<h2> Video </h2>
-			<video controls>
-			  <source src="videoplayback.mp4" type="video/mp4">
+			<h2> Video </h2> <!-- Título de la sección de Video -->
+			<video controls> <!-- Reproductor de video con controles -->
+			  <source src="videoplayback.mp4" type="video/mp4"> <!-- Fuente del video en formato MP4 -->
 			</video>
 		</article>		  
 	</main>
 	
 	<aside>
-		<a target="_blank" href="responsive-resume-master/index.html">Ver mi currículum responsive</a>
+		<a target="_blank" href="responsive-resume-master/index.html">Ver mi currículum responsive</a> <!-- Enlace a un currículum responsive en otra página (repetido en el nav) -->
 	</aside>
 	
 	<footer>
-		<h2>Experiencias</h2>
-		<p>Trabajé como desarrollador web en una pequeña agencia durante 2 años</p>
+		<h2>Experiencias</h2> <!-- Título de la sección de Experiencias en el pie de página -->
+		<p>Trabajé como desarrollador web en una pequeña agencia durante 2 años</p> <!-- Texto descriptivo de la experiencia laboral -->
 	</footer>
 </body>
 </html>
