--- a/responsive-resume-master/index.html
+++ b/responsive-resume-master/index.html
@@ -265,21 +265,21 @@
 
                     <!-- REFERENCES -->
                     <section class="references section" id="references">
-                        <h2 class="section-title">References</h2>
+                        <h2 class="section-title">Referencias</h2>
                         <div class="references_container bd-grid">
                             <div class="references_content bd-grid">
-                                <span class="references_subtitle">CEO IT-Artificer</span>
-                                <h3 class="references_title">Mr. Haider Ali</h3>
+                                <span class="references_subtitle">CEO</span>
+                                <h3 class="references_title">Sr. Haider Ali</h3>
                                 <ul class="references_contact">
-                                    <li>Phone:  +92-333-9296314</li>
+                                    <li>Tel:  +92-333-9296314</li>
                                     <li>Email:  thehaider@yahoo.com</li>
                                 </ul>
                             </div>
                             <div class="references_content bd-grid">
-                                <span class="references_subtitle">Professor</span>
+                                <span class="references_subtitle">Profesor</span>
                                 <h3 class="references_title">Dr. Irshad Ahmad</h3>
                                 <ul class="references_contact">
-                                    <li>Phone:  091-9222258</li>
+                                    <li>Tel:  091-9222258</li>
                                     <li>Email:  Irshad.ahmad@icp.edu.pk</li>
                                 </ul>
                             </div>
