--- a/practico1/index.html
+++ b/practico1/index.html
@@ -15,7 +15,7 @@
             <select id="operador">
                 <option value="suma">+ (suma)</option>
                 <option value="resta">- (resta)</option>
-                <option value="multiplicacion">* (multiplicación)</option>
+                <option value="multiplicacion">x (multiplicación)</option>
                 <option value="division">/ (división)</option>
             </select>
         </div>
