--- a/practico2/index.html
+++ b/practico2/index.html
@@ -19,7 +19,7 @@
         <button id="resetButton" class="btn btn-secondary btn-block mt-3">Reiniciar Juego</button>
       </div>
     </div>
-    <div id="resultados" class="mt-4"></div>
+
   </div>
 
 
@@ -32,7 +32,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" id="opciones">
           <p>Selecciona una opción:</p>
           <button class="btn btn-secondary optionButton" data-choice="piedra">
             <i class="fas fa-hand-rock"></i> Piedra
@@ -44,8 +44,10 @@
             <i class="fas fa-hand-scissors"></i> Tijera
           </button>
         </div>
+        <div id="resultados" class="mt-4"></div>
       </div>
     </div>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
